--- a/boutique.html
+++ b/boutique.html
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Boutique - EsipTvMax</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-  <h1>EsipTvMax</h1>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="boutique.html">Boutique</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
-
 <h2 class="title">Nos abonnements</h2>
 
 <div class="products">
@@ -24,23 +5,29 @@
     <h3>1 Mois</h3>
     <p>HD / 4K</p>
     <p class="price">15€</p>
-    <a class="btn" href="contact.html">Commander</a>
+    <button onclick="addToCart('Abonnement 1 Mois', 15)">Ajouter au panier</button>
   </div>
 
   <div class="product">
     <h3>6 Mois</h3>
     <p>HD / 4K</p>
     <p class="price">45€</p>
-    <a class="btn" href="contact.html">Commander</a>
+    <button onclick="addToCart('Abonnement 6 Mois', 45)">Ajouter au panier</button>
   </div>
 
   <div class="product">
     <h3>12 Mois</h3>
     <p>HD / 4K</p>
     <p class="price">70€</p>
-    <a class="btn" href="contact.html">Commander</a>
+    <button onclick="addToCart('Abonnement 12 Mois', 70)">Ajouter au panier</button>
   </div>
 </div>
 
-</body>
-</html>
+<h2 class="title">🛒 Panier</h2>
+<div id="cart"></div>
+<p><strong>Total :</strong> <span id="total">0</span> €</p>
+
+<div id="paypal-button-container"></div>
+
+<script src="script.js"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
