--- a/boutique.html
+++ b/boutique.html
@@ -30,4 +30,4 @@
 <div id="paypal-button-container"></div>
 
 <script src="script.js"></script>
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=EUR"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=AUYjL6Fif1JsT2c8l3-hxtWQO1mAFlLh5EZ_aZEUOD6yEooiW_9k4jRwq1yc_IuhQuiF3ph83xtlpQuQ&currency=EUR"></script>
