--- a/index.html
+++ b/index.html
@@ -12,26 +12,51 @@
   <nav>
     <a href="index.html">Accueil</a>
     <a href="boutique.html">Boutique</a>
-    <a href="faq.html">FAQ</a>
+    <a href="panier.html">Panier</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
+<!-- HERO -->
 <section class="hero">
-  <h2>Abonnements IPTV HD & 4K</h2>
-  <p>Chaînes TV • Films • Séries • Sports</p>
-  <a class="btn" href="boutique.html">Voir les offres</a>
+  <div class="hero-content">
+    <h2>Abonnements IPTV Premium</h2>
+    <p>
+      Chaînes TV • Films • Séries • Sports <br>
+      Qualité HD, Full HD & 4K
+    </p>
+
+    <a href="boutique.html" class="hero-btn">
+      Voir les offres
+    </a>
+  </div>
 </section>
 
+<!-- AVANTAGES -->
 <section class="features">
-  <div>✔ Activation rapide</div>
-  <div>✔ Compatible Smart TV, Android, PC</div>
-  <div>✔ Support 24/7</div>
-  <div>✔ Qualité HD / 4K</div>
+  <div class="feature">
+    ✔ Activation rapide
+  </div>
+  <div class="feature">
+    ✔ Compatible Smart TV, Android, PC
+  </div>
+  <div class="feature">
+    ✔ Support client 7j/7
+  </div>
+  <div class="feature">
+    ✔ Qualité HD / 4K
+  </div>
+</section>
+
+<!-- CTA BAS -->
+<section class="cta">
+  <h3>Prêt à commencer ?</h3>
+  <p>Choisissez votre abonnement IPTV dès maintenant</p>
+  <a href="boutique.html" class="btn">Accéder à la boutique</a>
 </section>
 
 <footer>
-  <p>© 2025 EsipTvMax</p>
+  <p>© 2025 EsipTvMax – Tous droits réservés</p>
 </footer>
 
 </body>
