--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>EsipTvMax - Abonnements IPTV Premium</title>
+  <title>EsipTvMax – Service IPTV Premium</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,52 +11,35 @@
   <h1>EsipTvMax</h1>
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="boutique.html">Boutique</a>
-    <a href="panier.html">Panier</a>
+    <a href="boutique.html">Abonnements</a>
+    <a href="telechargement.html">Application</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="hero-content">
-    <h2>Abonnements IPTV Premium</h2>
-    <p>
-      Chaînes TV • Films • Séries • Sports <br>
-      Qualité HD, Full HD & 4K
-    </p>
-
-    <a href="boutique.html" class="hero-btn">
-      Voir les offres
-    </a>
-  </div>
+  <h2>Le service IPTV le plus complet du marché</h2>
+  <p>
+    Chaînes TV • Films • Séries • VOD • Sports<br>
+    Compatible tous supports – Qualité HD / Full HD / 4K
+  </p>
+  <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
 </section>
 
-<!-- AVANTAGES -->
 <section class="features">
-  <div class="feature">
-    ✔ Activation rapide
-  </div>
-  <div class="feature">
-    ✔ Compatible Smart TV, Android, PC
-  </div>
-  <div class="feature">
-    ✔ Support client 7j/7
-  </div>
-  <div class="feature">
-    ✔ Qualité HD / 4K
-  </div>
+  <div>✔ Compatible tous supports</div>
+  <div>✔ Activation rapide</div>
+  <div>✔ Application Android EsipTvMax</div>
+  <div>✔ Support client réactif</div>
 </section>
 
-<!-- CTA BAS -->
 <section class="cta">
-  <h3>Prêt à commencer ?</h3>
-  <p>Choisissez votre abonnement IPTV dès maintenant</p>
-  <a href="boutique.html" class="btn">Accéder à la boutique</a>
+  <h3>Profitez d’un accès complet dès aujourd’hui</h3>
+  <a href="boutique.html" class="btn">Commander maintenant</a>
 </section>
 
 <footer>
-  <p>© 2025 EsipTvMax – Tous droits réservés</p>
+  <p>© EsipTvMax – Tous droits réservés</p>
 </footer>
 
 </body>
