--- a/index.html
+++ b/index.html
@@ -17,13 +17,29 @@
   </nav>
 </header>
 
-<section class="hero">
-  <h2>Le service IPTV le plus complet du marché</h2>
-  <p>
-    Chaînes TV • Films • Séries • VOD • Sports<br>
-    Compatible tous supports – Qualité HD / Full HD / 4K
-  </p>
-  <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
+<section class="hero-full">
+
+  <img 
+    src="images/logo-esiptv.png" 
+    alt="Logo EsipTvMax" 
+    class="hero-logo"
+  >
+
+  <img 
+    src="images/banner-content.jpg" 
+    alt="Contenu IPTV" 
+    class="hero-banner"
+  >
+
+  <div class="hero-text">
+    <h2>Le meilleur service IPTV du marché</h2>
+    <p>
+      Chaînes TV • Films • Séries • Sports • VOD<br>
+      Compatible tous supports – Qualité HD / 4K
+    </p>
+    <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
+  </div>
+
 </section>
 
 <section class="features">
