--- a/index.html
+++ b/index.html
@@ -17,27 +17,21 @@
   </nav>
 </header>
 
-<section class="hero-full">
+<section class="hero-pro">
 
-  <img 
-    src="images/logo-esiptv.png" 
-    alt="Logo EsipTvMax" 
-    class="hero-logo"
-  >
+  <div class="hero-content">
+    <img src="images/logo-esiptv.png" alt="EsipTvMax" class="hero-logo">
 
-  <img 
-    src="images/banner-content.jpg" 
-    alt="Contenu IPTV" 
-    class="hero-banner"
-  >
+    <h2>Le meilleur service IPTV Premium</h2>
 
-  <div class="hero-text">
-    <h2>Le meilleur service IPTV du marché</h2>
     <p>
       Chaînes TV • Films • Séries • Sports • VOD<br>
-      Compatible tous supports – Qualité HD / 4K
+      Qualité HD / 4K – Compatible tous supports
     </p>
-    <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
+
+    <a href="boutique.html" class="hero-btn">
+      Voir les abonnements
+    </a>
   </div>
 
 </section>
