--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <section class="hero-pro">
 
   <div class="hero-content">
-    <img src="images/logo-esiptv.png" alt="EsipTvMax" class="hero-logo">
+    <img 
+  src="images/banner-esiptvmax.jpg" 
+  alt="Bannière EsipTvMax" 
+  class="hero-banner"
+>
 
     <h2>Le meilleur service IPTV Premium</h2>
 
