--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
   </nav>
 </header>
 
-<section class="hero-pro">
+<section class="hero-simple">
 
-  <div class="hero-content">
-    <img 
-  src="images/banner-esiptvmax.jpg" 
-  alt="Bannière EsipTvMax" 
-  class="hero-banner"
->
+  <!-- BANNIÈRE IMAGE -->
+  <img 
+    src="images/banner-esiptvmax.jpg" 
+    alt="Bannière EsipTvMax" 
+    class="hero-banner-top"
+  >
 
+  <!-- TEXTE PAR DESSUS -->
+  <div class="hero-text">
     <h2>Le meilleur service IPTV Premium</h2>
-
     <p>
       Chaînes TV • Films • Séries • Sports • VOD<br>
       Qualité HD / 4K – Compatible tous supports
     </p>
-
-    <a href="boutique.html" class="hero-btn">
-      Voir les abonnements
-    </a>
+    <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
   </div>
 
 </section>
