--- a/index.html
+++ b/index.html
@@ -17,25 +17,21 @@
   </nav>
 </header>
 
-<section class="hero-simple">
+<!-- BANNIÈRE PLEINE LARGEUR -->
+<img 
+  src="images/banner-esiptvmax.jpg"
+  alt="Bannière EsipTvMax"
+  class="banner-full"
+>
 
-  <!-- BANNIÈRE IMAGE -->
-  <img 
-    src="images/banner-esiptvmax.jpg" 
-    alt="Bannière EsipTvMax" 
-    class="hero-banner-top"
-  >
-
-  <!-- TEXTE PAR DESSUS -->
-  <div class="hero-text">
-    <h2>Le meilleur service IPTV Premium</h2>
-    <p>
-      Chaînes TV • Films • Séries • Sports • VOD<br>
-      Qualité HD / 4K – Compatible tous supports
-    </p>
-    <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
-  </div>
-
+<!-- TEXTE APRÈS LA BANNIÈRE -->
+<section class="hero-text-only">
+  <h2>Le meilleur service IPTV Premium</h2>
+  <p>
+    Chaînes TV • Films • Séries • Sports • VOD<br>
+    Qualité HD / 4K – Compatible tous supports
+  </p>
+  <a href="boutique.html" class="hero-btn">Voir les abonnements</a>
 </section>
 
 <section class="features">
