--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <a href="index.html">Accueil</a>
     <a href="boutique.html">Abonnements</a>
-    <a href="telechargement.html">Application</a>
+    <a href="telechargement.html">Téléchargemen</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
