--- a/telechargement.html
+++ b/telechargement.html
@@ -23,24 +23,24 @@
 
   <div class="download-grid">
 
-    <a href="#" class="download-card">
-      <img src="images/android.png" alt="Android">
+    <a href="665544.to" class="download-card">
+      <img src="images/esiptvmax.jpg" alt="Android">
       <span>Android</span>
     </a>
 
     <a href="#" class="download-card">
-      <img src="images/windows.png" alt="Windows">
-      <span>Windows</span>
+      <img src="images/000player.jpg" alt="Windows">
+      <span>Application IOS Android et Web Player</span>
     </a>
 
-    <a href="#" class="download-card">
-      <img src="images/smarttv.png" alt="Smart TV">
+    <a href="line2.998877.in" class="download-card">
+      <img src="images/esiptvlineplayerv3" alt="Smart TV">
       <span>Smart TV</span>
     </a>
 
-    <a href="#" class="download-card">
-      <img src="images/mac.png" alt="Mac">
-      <span>Mac / iOS</span>
+    <a href="#http://001122.org" class="download-card">
+      <img src="images/iptvsmarterpro.png" alt="Mac">
+      <span>Mac / Smart Tv IptvSmarter Pro</span>
     </a>
 
   </div>
