--- a/telechargement.html
+++ b/telechargement.html
@@ -18,30 +18,44 @@
 </header>
 
 <section class="download">
-  <h2>Télécharger l’application EsipTvMax</h2>
-  <p>Choisissez votre appareil pour télécharger l’application</p>
+  <h2>Applications compatibles</h2>
+  <p>Téléchargez l’application adaptée à votre appareil</p>
 
   <div class="download-grid">
 
-    <a href="665544.to" class="download-card">
-      <img src="images/esiptvmax.jpg" alt="Android">
-      <span>Android</span>
-    </a>
+    <!-- ESIPTVMAX -->
+    <div class="download-card">
+      <img src="images/esiptvmax.jpg" alt="EsipTvMax">
+      <h3>EsipTvMax</h3>
+      <a href="#" class="btn-download">Télécharger</a>
+    </div>
 
-    <a href="#" class="download-card">
-      <img src="images/000player.jpg" alt="Windows">
-      <span>Application IOS Android et Web Player</span>
-    </a>
+    <!-- 000 PLAYER -->
+    <div class="download-card">
+      <img src="images/000player.jpg" alt="000 Player">
+      <h3>000 Player</h3>
+      <a href="#" class="btn-download">Télécharger</a>
+    </div>
 
-    <a href="line2.998877.in" class="download-card">
-      <img src="images/esiptvlineplayerv3" alt="Smart TV">
-      <span>Smart TV</span>
-    </a>
+    <!-- IPTV SMARTERS PRO (4 liens) -->
+    <div class="download-card">
+      <img src="images/iptvsmarterpro.png" alt="IPTV Smarters Pro">
+      <h3>IPTV Smarters Pro</h3>
 
-    <a href="#http://001122.org" class="download-card">
-      <img src="images/iptvsmarterpro.png" alt="Mac">
-      <span>Mac / Smart Tv IptvSmarter Pro</span>
-    </a>
+      <div class="multi-links">
+        <a href="#">Android</a>
+        <a href="#">Android TV</a>
+        <a href="#">Windows</a>
+        <a href="#">Smart TV</a>
+      </div>
+    </div>
+
+    <!-- ESIPTV LINE PLAYER -->
+    <div class="download-card">
+      <img src="images/esiptvlineplayerv3.jpg" alt="EsipTv Line Player V3">
+      <h3>EsipTv Line Player V3</h3>
+      <a href="#" class="btn-download">Télécharger</a>
+    </div>
 
   </div>
 </section>
