--- a/telechargement.html
+++ b/telechargement.html
@@ -21,39 +21,39 @@
   <h2>Applications compatibles</h2>
   <p>Téléchargez l’application adaptée à votre appareil</p>
 
-  <div class="download-grid">
+<div class="download-grid">
 
     <!-- ESIPTVMAX -->
     <div class="download-card">
-      <img src="images/esiptvmax.jpg" alt="EsipTvMax">
-      <h3>EsipTvMax</h3>
+      <img src="images/esiptvmax.jpg" alt="EsipTvMax App">
+      <h3>EsipTvMax Application</h3>
       <a href="#" class="btn-download">Télécharger</a>
     </div>
 
-    <!-- 000 PLAYER -->
+    <!-- 000 PLAYER (4 liens) -->
     <div class="download-card">
       <img src="images/000player.jpg" alt="000 Player">
       <h3>000 Player</h3>
-      <a href="#" class="btn-download">Télécharger</a>
-    </div>
-
-    <!-- IPTV SMARTERS PRO (4 liens) -->
-    <div class="download-card">
-      <img src="images/iptvsmarterpro.png" alt="IPTV Smarters Pro">
-      <h3>IPTV Smarters Pro</h3>
 
       <div class="multi-links">
-        <a href="#">Android</a>
-        <a href="#">Android TV</a>
-        <a href="#">Windows</a>
-        <a href="#">Smart TV</a>
+        <a href="#" target="_blank">Apple Store</a>
+        <a href="#" target="_blank">Google Play</a>
+        <a href="#" target="_blank">Downloader</a>
+        <a href="#" target="_blank">Web Player Link</a>
       </div>
     </div>
 
-    <!-- ESIPTV LINE PLAYER -->
+    <!-- IPTV SMARTERS PRO -->
     <div class="download-card">
-      <img src="images/esiptvlineplayerv3.jpg" alt="EsipTv Line Player V3">
-      <h3>EsipTv Line Player V3</h3>
+      <img src="images/iptvsmarterpro.png" alt="IPTV Smarters Pro">
+      <h3>IPTV Smarters Pro</h3>
+      <a href="#" class="btn-download">Télécharger</a>
+    </div>
+
+    <!-- LINE PLAYER V3 -->
+    <div class="download-card">
+      <img src="images/esiptvlineplayerv3.jpg" alt="Line Player V3">
+      <h3>Line Player V3</h3>
       <a href="#" class="btn-download">Télécharger</a>
     </div>
 
