--- a/telechargement.html
+++ b/telechargement.html
@@ -27,7 +27,7 @@
     <div class="download-card">
       <img src="images/esiptvmax.jpg" alt="EsipTvMax App">
       <h3>EsipTvMax Application</h3>
-      <a href="#" class="btn-download">Télécharger</a>
+      <a href="665544.to" class="btn-download">Télécharger</a>
     </div>
 
     <!-- 000 PLAYER (4 liens) -->
@@ -36,10 +36,10 @@
       <h3>000 Player</h3>
 
       <div class="multi-links">
-        <a href="#" target="_blank">Apple Store</a>
-        <a href="#" target="_blank">Google Play</a>
-        <a href="#" target="_blank">Downloader</a>
-        <a href="#" target="_blank">Web Player Link</a>
+        <a href="https://apps.apple.com/us/app/000-player/id1665441224" target="_blank">Apple Store</a>
+        <a href="https://play.google.com/store/apps/details?id=com.player.iptv" target="_blank">Google Play</a>
+        <a href="http://aftv.news/6913771" target="_blank">Downloader</a>
+        <a href="http://my.splayer.in/" target="_blank">Web Player Link</a>
       </div>
     </div>
 
@@ -54,7 +54,7 @@
     <div class="download-card">
       <img src="images/esiptvlineplayerv3.jpg" alt="Line Player V3">
       <h3>Line Player V3</h3>
-      <a href="#" class="btn-download">Télécharger</a>
+      <a href="https://line2.998877.in/" class="btn-download">Télécharger</a>
     </div>
 
   </div>
