--- a/telechargement.html
+++ b/telechargement.html
@@ -21,25 +21,35 @@
   <h2>Applications compatibles</h2>
   <p>Téléchargez l’application adaptée à votre appareil</p>
 
-<div class="download-grid">
+  <div class="download-grid">
 
     <!-- ESIPTVMAX -->
     <div class="download-card">
-      <img src="images/esiptvmax.jpg" alt="EsipTvMax App">
-      <h3>EsipTvMax Application</h3>
-      <a href="665544.to" class="btn-download">Télécharger</a>
+      <img src="images/esiptvmax.jpg" alt="EsipTvMax">
+      <h3>EsipTvMax</h3>
+      <a href="https://665544.to" class="btn-download" target="_blank" rel="noopener">
+        Télécharger
+      </a>
     </div>
 
-    <!-- 000 PLAYER (4 liens) -->
+    <!-- 000 PLAYER -->
     <div class="download-card">
       <img src="images/000player.jpg" alt="000 Player">
       <h3>000 Player</h3>
 
       <div class="multi-links">
-        <a href="https://apps.apple.com/us/app/000-player/id1665441224" target="_blank">Apple Store</a>
-        <a href="https://play.google.com/store/apps/details?id=com.player.iptv" target="_blank">Google Play</a>
-        <a href="http://aftv.news/6913771" target="_blank">Downloader</a>
-        <a href="http://my.splayer.in/" target="_blank">Web Player Link</a>
+        <a href="https://apps.apple.com/us/app/000-player/id1665441224" target="_blank" rel="noopener">
+          Apple Store
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.player.iptv" target="_blank" rel="noopener">
+          Google Play
+        </a>
+        <a href="http://aftv.news/6913771" target="_blank" rel="noopener">
+          Downloader
+        </a>
+        <a href="http://my.splayer.in/" target="_blank" rel="noopener">
+          Web Player Link
+        </a>
       </div>
     </div>
 
@@ -47,14 +57,18 @@
     <div class="download-card">
       <img src="images/iptvsmarterpro.png" alt="IPTV Smarters Pro">
       <h3>IPTV Smarters Pro</h3>
-      <a href="#" class="btn-download">Télécharger</a>
+      <a href="http://001122.org" class="btn-download" target="_blank" rel="noopener">
+        Télécharger
+      </a>
     </div>
 
-    <!-- LINE PLAYER V3 -->
+    <!-- ESIPTV LINE PLAYER V3 -->
     <div class="download-card">
-      <img src="images/esiptvlineplayerv3.jpg" alt="Line Player V3">
-      <h3>Line Player V3</h3>
-      <a href="https://line2.998877.in/" class="btn-download">Télécharger</a>
+      <img src="images/esiptvlineplayerv3.jpg" alt="EsipTv Line Player V3">
+      <h3>EsipTv Line Player V3</h3>
+      <a href="https://line2.998877.in/" class="btn-download" target="_blank" rel="noopener">
+        Télécharger
+      </a>
     </div>
 
   </div>
