--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - EsipTvMax</title>
+  <title>Contact – EsipTvMax</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,42 +17,47 @@
   </nav>
 </header>
 
-<h2 class="title">Nous contacter</h2>
+<section class="contact-section">
+  <h2>Nous contacter</h2>
+  <p class="contact-subtitle">
+    Notre équipe est disponible pour vous aider rapidement
+  </p>
 
-<div class="contact-container">
+  <div class="contact-grid">
 
-  <!-- FORMULAIRE EMAIL -->
-  <div class="contact-box">
-    <h3>📧 Contact par email</h3>
+    <!-- CONTACT EMAIL -->
+    <div class="contact-card">
+      <h3>📧 Contact par email</h3>
 
-   <form 
-  action="https://formspree.io/f/xvzpeqpj" 
-  method="POST"
-  class="contact-form">
+      <form>
+        <input type="text" placeholder="Votre nom" required>
+        <input type="email" placeholder="Votre adresse email" required>
+        <textarea placeholder="Votre message" rows="5" required></textarea>
+        <button type="submit">Envoyer le message</button>
+      </form>
+    </div>
 
-  <input type="text" name="name" placeholder="Votre nom" required>
-  <input type="email" name="email" placeholder="Votre adresse email" required>
-  <textarea name="message" placeholder="Votre message" required></textarea>
+    <!-- CONTACT WHATSAPP -->
+    <div class="contact-card">
+      <h3>💬 Contact WhatsApp</h3>
+      <p>Réponse rapide – chat direct avec notre support</p>
 
-  <button type="submit">Envoyer le message</button>
-</form>
+      <a
+        href="https://wa.me/XXXXXXXXXXX"
+        target="_blank"
+        rel="noopener"
+        class="whatsapp-btn"
+      >
+        Discuter sur WhatsApp
+      </a>
+    </div>
 
   </div>
+</section>
 
-  <!-- WHATSAPP -->
-  <div class="contact-box whatsapp-box">
-    <h3>💬 Contact WhatsApp</h3>
-    <p>Réponse rapide – chat direct</p>
-
-    <a 
-      href="https://wa.me/33768952586?text=Bonjour%20je%20souhaite%20des%20informations%20sur%20EsipTvMax"
-      target="_blank"
-      class="whatsapp-btn">
-      Discuter sur WhatsApp
-    </a>
-  </div>
-
-</div>
+<footer>
+  <p>© EsipTvMax – Tous droits réservés</p>
+</footer>
 
 </body>
 </html>
