--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <p>Réponse rapide – chat direct avec notre support</p>
 
       <a
-        href="https://wa.me/XXXXXXXXXXX"
+        href="https://wa.me/0033768952586"
         target="_blank"
         rel="noopener"
         class="whatsapp-btn"
