--- a/application.html
+++ b/application.html
@@ -7,9 +7,25 @@
 </head>
 <body>
 
-<header>
-  <h1>EsipTvMax</h1>
+<header class="main-header">
+  <div class="header-container">
+
+    <div class="logo">
+      <span class="logo-main">Esip</span><span class="logo-accent">TvMax</span>
+    </div>
+
+    <nav class="main-nav">
+      <a href="index.html">Accueil</a>
+      <a href="abonnements.html">Abonnements</a>
+      <a href="telechargement.html">Téléchargement</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact</a>
+      <a href="panier.html" class="panier-link">🛒 Panier</a>
+    </nav>
+
+  </div>
 </header>
+
 
 <h2 class="title">Télécharger l’application EsipTvMax</h2>
 
