--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
       <a href="index.html">Accueil</a>
       <a href="abonnements.html">Abonnements</a>
       <a href="telechargement.html">Téléchargement</a>
+      <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
       <a href="panier.html" class="panier-link">🛒 Panier</a>
     </nav>
 
   </div>
 </header>
+
 
 <!-- BANNIÈRE PLEINE LARGEUR -->
 <img 
