--- a/panier.html
+++ b/panier.html
@@ -46,99 +46,33 @@
 <!-- ✅ SCRIPT PANIER FINAL -->
 <script>
 let cart = JSON.parse(localStorage.getItem("cart")) || [];
-let promoType = null;
 
 const cartItemsDiv = document.getElementById("cart-items");
 const cartTotalDiv = document.getElementById("cart-total");
-const promoMessage = document.getElementById("promoMessage");
 
 function renderCart() {
   cartItemsDiv.innerHTML = "";
   let total = 0;
-  let discountedTotal = 0;
 
   if (cart.length === 0) {
-    cartItemsDiv.innerHTML =
-      "<p style='text-align:center;'>Votre panier est vide.</p>";
+    cartItemsDiv.innerHTML = "<p style='text-align:center;'>Votre panier est vide.</p>";
     cartTotalDiv.innerText = "";
-    localStorage.setItem("cartTotal", "0.00");
     return;
   }
 
   cart.forEach((item, index) => {
-    let finalPrice = item.price;
-
-    // 🔸 BANO15 : -15% sur tout
-    if (promoType === "BANO15") {
-      finalPrice = item.price * 0.85;
-    }
-
-    // 🔸 TATINETTE : -60% UNIQUEMENT sur 1 an
-    if (
-if (promoType === "TATINETTE") {
-  if (
-    item.name === "Abonnement 1 an – Android" ||
-    item.name === "Abonnement 1 an – Tous supports"
-  ) {
-    finalPrice = item.price * 0.40;
-  }
-}
-
-    discountedTotal += finalPrice;
     total += item.price;
 
     cartItemsDiv.innerHTML += `
       <div class="cart-item">
         <span>${item.name}</span>
-        <div>
-          <strong>${finalPrice.toFixed(2)} €</strong>
-          <button onclick="removeItem(${index})">❌</button>
-        </div>
+        <strong>${item.price.toFixed(2)} €</strong>
+        <button onclick="removeItem(${index})">❌</button>
       </div>
     `;
   });
 
-  if (promoType) {
-    cartTotalDiv.innerText =
-      "Total : " + discountedTotal.toFixed(2) + " € (promo appliquée)";
-    localStorage.setItem("cartTotal", discountedTotal.toFixed(2));
-  } else {
-    cartTotalDiv.innerText = "Total : " + total.toFixed(2) + " €";
-    localStorage.setItem("cartTotal", total.toFixed(2));
-  }
-}
-
-function applyPromo() {
-  const code = document.getElementById("promoCode").value.trim().toUpperCase();
-
-  if (code === "BANO15") {
-    promoType = "BANO15";
-    promoMessage.innerText =
-      "Code BANO15 appliqué : -15% sur tout le panier";
-  } 
-  else if (code === "TATINETTE") {
-    const hasOneYear = cart.some(item =>
-      item.name.toLowerCase().includes("1 an")
-    );
-
-    if (!hasOneYear) {
-      promoType = null;
-      promoMessage.innerText =
-        "Code TATINETTE valable uniquement sur les abonnements 1 an";
-      renderCart();
-      return;
-    }
-
-    promoType = "TATINETTE";
-    promoMessage.innerText =
-      "Code TATINETTE appliqué : -60% sur les abonnements 1 an";
-  } 
-  else {
-    promoType = null;
-    promoMessage.innerText = "Code promo invalide";
-  }
-
-  renderCart();
+  cartTotalDiv.innerText = "Total : " + total.toFixed(2) + " €";
 }
 
 function removeItem(index) {
@@ -149,7 +83,7 @@ function removeItem(index) {
 
 function clearCart() {
   localStorage.removeItem("cart");
-  promoType = null;
+  cart = [];
   renderCart();
 }
 
