--- a/abonnements.html
+++ b/abonnements.html
@@ -88,7 +88,7 @@ function addToCart(name, price) {
 
   alert(name + " ajouté au panier");
 }
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
