--- a/panier.html
+++ b/panier.html
@@ -9,20 +9,15 @@
 
 <header class="main-header">
   <div class="header-container">
-
-    <div class="logo">
-      <span class="logo-main">Esip</span><span class="logo-accent">TvMax</span>
-    </div>
-
+    <div class="logo"><span class="logo-main">Esip</span><span class="logo-accent">TvMax</span></div>
     <nav class="main-nav">
       <a href="index.html">Accueil</a>
       <a href="abonnements.html">Abonnements</a>
       <a href="telechargement.html">Téléchargement</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
-      <a href="panier.html" class="panier-link">🛒 Panier</a>
+      <a href="panier.html">🛒 Panier</a>
     </nav>
-
   </div>
 </header>
 
@@ -30,65 +25,18 @@
 
 <div id="cart-items" class="cart-container"></div>
 
-<h3 id="cart-total" style="text-align:center;"></h3>
+<h3 id="cart-total" class="cart-total"></h3>
 
-<!-- 🔹 CODE PROMO -->
-<div class="promo-wrapper">
-  <div class="promo-box">
-    <input type="text" id="promoCode" placeholder="Code promo">
-    <button onclick="applyPromo()">Appliquer</button>
-  </div>
-  <p id="promoMessage" class="promo-message">
-    Les codes promotionnels sont soumis à conditions.
-  </p>
+<div class="promo-box">
+  <input id="promo-code" type="text" placeholder="Code promo">
+  <button onclick="applyPromo()">Appliquer</button>
+  <p class="promo-info">Les codes promotionnels sont soumis à conditions.</p>
 </div>
 
-<!-- ✅ SCRIPT PANIER FINAL -->
-<script>
-let cart = JSON.parse(localStorage.getItem("cart")) || [];
+<div class="cart-actions">
+  <button onclick="clearCart()" class="btn">Vider le panier</button>
+</div>
 
-const cartItemsDiv = document.getElementById("cart-items");
-const cartTotalDiv = document.getElementById("cart-total");
-
-function renderCart() {
-  cartItemsDiv.innerHTML = "";
-  let total = 0;
-
-  if (cart.length === 0) {
-    cartItemsDiv.innerHTML = "<p style='text-align:center;'>Votre panier est vide.</p>";
-    cartTotalDiv.innerText = "";
-    return;
-  }
-
-  cart.forEach((item, index) => {
-    total += item.price;
-
-    cartItemsDiv.innerHTML += `
-      <div class="cart-item">
-        <span>${item.name}</span>
-        <strong>${item.price.toFixed(2)} €</strong>
-        <button onclick="removeItem(${index})">❌</button>
-      </div>
-    `;
-  });
-
-  cartTotalDiv.innerText = "Total : " + total.toFixed(2) + " €";
-}
-
-function removeItem(index) {
-  cart.splice(index, 1);
-  localStorage.setItem("cart", JSON.stringify(cart));
-  renderCart();
-}
-
-function clearCart() {
-  localStorage.removeItem("cart");
-  cart = [];
-  renderCart();
-}
-
-renderCart();
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
