--- a/abonnements.html
+++ b/abonnements.html
@@ -65,6 +65,18 @@
   </a>
 </div>
 
+  .panier-link {
+  background: #e50914;
+  color: #fff !important;
+  padding: 8px 14px;
+  border-radius: 6px;
+  font-weight: 600;
+}
+
+.panier-link:hover {
+  background: #ff1e27;
+}
+
 <script src="script.js"></script>
 </body>
 </html>
