--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <a href="telechargement.html">Téléchargement</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
-      <a href="panier.html" class="panier-link">🛒 Panier</a>
+      <a href="panier.html" class="panier-link">
+  🛒 Panier (<span id="cart-count">0</span>)
+</a>
     </nav>
 
   </div>
