--- a/panier.html
+++ b/panier.html
@@ -16,7 +16,9 @@
       <a href="telechargement.html">Téléchargement</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
-      <a href="panier.html">🛒 Panier</a>
+      <a href="panier.html" class="panier-link">
+  🛒 Panier (<span id="cart-count">0</span>)
+</a>
     </nav>
   </div>
 </header>
