--- a/abonnements.html
+++ b/abonnements.html
@@ -67,6 +67,12 @@
   </a>
 </div>
 
+  <div class="cart-cta">
+  <a href="panier.html" class="btn">
+    🛒 Accéder au panier
+  </a>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
