--- a/success.html
+++ b/success.html
@@ -15,28 +15,21 @@
   </div>
 </header>
 
-<div style="max-width:600px;margin:80px auto;text-align:center;">
-  <h1 style="color:#4CAF50;">✅ Paiement réussi</h1>
-
-  <p style="font-size:18px;margin:20px 0;">
-    Merci pour votre achat.<br>
-    Votre paiement a bien été confirmé.
+<section style="text-align:center; padding:80px 20px;">
+  <h2>✅ Paiement réussi</h2>
+  <p style="margin-top:20px; font-size:18px; color:#ccc;">
+    Merci pour votre commande.<br>
+    Vous allez recevoir un email de confirmation.
   </p>
 
-  <p style="opacity:0.8;">
-    Vous allez recevoir les informations par email sous peu.
+  <p style="margin-top:15px;">
+    Notre équipe vous contactera rapidement pour l’activation de votre abonnement.
   </p>
 
-  <a href="index.html" class="btn" style="margin-top:30px;display:inline-block;">
+  <a href="index.html" class="btn" style="margin-top:30px; display:inline-block;">
     Retour à l’accueil
   </a>
-</div>
-  
-<script>
-  setTimeout(() => {
-    window.location.href = "index.html?payment=success";
-  }, 4000);
-</script>
-  
+</section>
+
 </body>
 </html>
