--- a/panier.html
+++ b/panier.html
@@ -37,7 +37,7 @@
     
     <!-- Configuration PayPal -->
     <input type="hidden" name="cmd" value="_xclick">
-    <input type="hidden" name="business" value="TON_EMAIL_PAYPAL_ICI">
+    <input type="hidden" name="business" value="esiptvmaxoff@gmail.com">
     <input type="hidden" name="item_name" value="Abonnement EsipTvMax">
     <input type="hidden" name="currency_code" value="EUR">
     <input type="hidden" name="amount" id="paypal-amount">
